# insane_livestock

./: Cargo.toml  README.md
assets/goat/: goat.ma
src/: gun.rs  main.rs  menu.rs  player.rs  spectator_camera.rs  twitch.rs  util.rs
